2007-03-14  Jb Evain  <jb@nurv.fr>
	* frontend/Command.cs: Rename PrintFrameCommand to SelectFrameCommand.
	and make it able to select the current frame.


svn path=/trunk/debugger/; revision=75069

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-14  Jb Evain  <jb@nurv.fr>
+
+	* frontend/Command.cs: Rename PrintFrameCommand to SelectFrameCommand.
+	and make it able to select the current frame.
+
 2007-03-14  Martin Baulig  <martin@ximian.com>
 
 	* languages/mono/MonoSymbolFile.cs
