--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-05-08  Martin Baulig  <martin@ximian.com>
+
+	* languages/mono/MonoClassType.cs
+	(MonoClassType.GetCurrentObject): Unbox the object if necessary.
+
+	* languages/mono/MonoClassObject.cs
+	(MonoClassObject.GetParentObject): Ensure that `type.IsByRef'.
+
 2007-05-02  Martin Baulig  <martin@ximian.com>
 
 	* languages/mono/MonoClassInfo.cs
