--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,11 @@
 
 2007-05-09  Martin Baulig  <martin@ximian.com>
 
+	* frontend/ObjectFormatter.cs
+	(ObjectFormatter.FormatEnum): Sort the keys alphabetically.
+
+2007-05-09  Martin Baulig  <martin@ximian.com>
+
 	* test/testsuite/NUnit.cs (TestSuite.Compile): Don't take a
 	filename argument; use the `FileName' and `ExeFileName' and pass
 	the output filename to mcs to make things work with
