2007-06-04  Martin Baulig  <martin@ximian.com>
	* debug-debugger.h (MonoDebuggerInfo): Changed signatures in the vtable:
	`(guint64, const gchar *)' -> `(guint64, guint64, const gchar *)'.


svn path=/branches/martin/debugger-dublin/; revision=78570

--- a/runtime/metadata/ChangeLog
+++ b/runtime/metadata/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-04  Martin Baulig  <martin@ximian.com>
+
+	* mono-debug.h (MONO_DEBUGGER_VERSION): Bump to 59.
+
 2007-05-31  Zoltan Varga  <vargaz@gmail.com>
 
 	* domain-internals.h (MonoDomain): Add two new hash tables to store delegate
