--- a/runtime/metadata/ChangeLog
+++ b/runtime/metadata/ChangeLog
@@ -1,3 +1,10 @@
+2007-06-21  Martin Baulig  <martin@ximian.com>
+
+	* mono-debug-debugger.h
+	(mono_debugger_insert_breakpoint_full): Moved to ../mini/debug-mini.h.
+	(mono_debugger_remove_breakpoint): Likewise.
+	(mono_debugger_breakpoint_callback): Likewise.
+
 2007-06-04  Martin Baulig  <martin@ximian.com>
 
 	* mono-debug.h (MONO_DEBUGGER_VERSION): Bump to 59.
