--- a/runtime/metadata/ChangeLog
+++ b/runtime/metadata/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-28  Martin Baulig  <martin@ximian.com>
+
+	* mono-debug.c (mono_debug_debugger_version): New public variable.
+
 2007-06-24  Gert Driesen  <drieseng@users.sourceforge.net>
 
 	* locales.c: When constructing DateTimeFormat or NumberFormat for
