--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-28  Martin Baulig  <martin@ximian.com>
+
+	* backend/MonoThreadManager.cs
+	(MonoDebuggerInfo): Reflect latest runtime changes; add the new
+	`DebuggerVersion' field.
+
 2007-06-04  Martin Baulig  <martin@ximian.com>
 
 	* classes/Thread.cs
