2007-07-27  Martin Baulig  <martin@ximian.com>
	* classes/LineNumberTable.cs
	(LineNumberTable): Made Lookup() and DumpLineNumbers() abstract;
	move the actual implementation into MonoSymbolFile.cs and
	DwarfReader.cs.	


svn path=/branches/martin/debugger-dublin/; revision=82843

--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,6 +1,13 @@
 2007-07-27  Martin Baulig  <martin@ximian.com>
 
 	* classes/LineNumberTable.cs
+	(LineNumberTable): Made Lookup() and DumpLineNumbers() abstract;
+	move the actual implementation into MonoSymbolFile.cs and
+	DwarfReader.cs.	
+
+2007-07-27  Martin Baulig  <martin@ximian.com>
+
+	* classes/LineNumberTable.cs
 	(LineNumberTable.Name): Removed.
 	(LineNumberTable.Module): Removed.
 
