--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-30  Martin Baulig  <martin@ximian.com>
+
+	* languages/DeferencedTargetLocation.cs: New file.
+
 2007-07-28  Martin Baulig  <martin@ximian.com>
 
 	* backend/arch/DwarfReader.cs: Almost completely redesign the line
