Code cleanups and ChangeLog.
svn path=/branches/martin/debugger-dublin/; revision=83177

--- a/runtime/metadata/ChangeLog
+++ b/runtime/metadata/ChangeLog
@@ -2,6 +2,23 @@
 
 	* mono-debug.c: Drop support for the old symbol tables.
 
+2007-08-01  Martin Baulig  <martin@ximian.com>
+
+	Rework and improve the debugging interface.
+
+	* mono-debug.h
+	(MonoDebugDataTable): New typedef.
+	(MonoDebugMethodAddressList): New typedef.
+	(MonoDebugWrapperData): Removed.
+	(MonoDebugSymbolTable): Removed `current_data_table',
+	`current_data_table_size', `current_data_table_offset'.
+	(MonoDebugDataItemType): Moved into mono-debug.c.
+	(MonoDebugMethodJitInfo): Remove `address'.
+	(mono_debug_data_table): New global variable.
+	(mono_debug_lookup_method_addresses): New public function.
+	(mono_debug_find_method): Take a `MonoMethod *', not a
+	`MonoDebugMethodInfo *'.
+
 2007-06-28  Martin Baulig  <martin@ximian.com>
 
 	* mono-debug.c (mono_debug_debugger_version): New public variable.
