--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-01  Martin Baulig  <martin@ximian.com>
+
+	Merged the branch into HEAD.
+
 2007-07-31  Martin Baulig  <martin@ximian.com>
 
 	* test/src/TestAppDomain.cs: New test.
